# speech_to_text

./: README.md  main.py  pyproject.toml
.github/workflows/: culture_workflows.yml
